2008-10-10  Kent Sebastian  <ksebasti@redhat.com>

	* cache.cxx (cache_clean): New group of functions implementing cache
	size limiting.

2008-10-09  Rajan Arora   <rarora@redhat.com>

	* elaborate.cxx (systemtap_session::print_error_source): New.
	(systemtap_session::print_error): Call it.
	(systemtap_session::print_warning): Likewise.
	* parse.cxx (parser::print_error): Likewise.
	* session.h (struct systemtap_session::print_error_source):
	Declare it.
	* parse.cxx (lexer::get_input_contents): New.
	(parser::parse): Call it.
	(lexer::set_current_file): New.
	(parser::parse): Call it.
	* parse.h (class lexer::get_input_contents): Declare it.
	(class lexer::set_current_file): Declare it.
	(class lexer): New member current_file.
	(class lexer): Update input_contents from vector<char>
	to std::string.
	(struct source_loc): New member stap_file.
	* staptree.h (struct stapfile): New member file_contents.

2008-10-09  Stan Cox  <scox@redhat.com>

	* tapsets.cxx (query_cu): Fix typo.

2008-10-06  Wenji Huang  <wenji.huang@oracle.com>

	PR 4886
	* translate.cxx (dump_unwindsyms): Extract build-id from debuginfo.
	(emit_module_init): Check build-id if able.

2008-10-03  Jim Keniston  <jkenisto@us.ibm.com>

	PR 6850
	* runtime/uprobes/uprobes.c: When a probed process forks with
	uretprobe_instances outstanding, create a uprobe_process and
	uprobe_task for the child, and clone the uretprobe_instances.
	This requires us to allow the SSOL vma to be copied on fork.
	* testsuite/systemtap.base/bz6850.{exp,c,stp}: new test case

2008-09-30  Mark Wielaard  <mjw@redhat.com>

	* tapsets.cxx (literal_stmt_for_local): Check if alternatives can be
	provided after calling dwarf_formref_die.
	(literal_stmt_for_return): Likewise.

2008-09-26  Frank Ch. Eigler  <fche@elastic.org>

	* elaborate.cxx (add_global_var_display): Implicitly sort arrays.

2008-09-26  Frank Ch. Eigler  <fche@elastic.org>

	PR 6916
	* elaborate.cxx (systemtap_session::print_error): Fix