@@ -1,3 +1,9 @@
+2008-10-10  Frank Ch. Eigler  <fche@elastic.org>
+
+	PR6749
+	* tapsets.cxx (dwarf_derived_probe_group::emit_module_init): Tolerate
+	failed register_*kprobe during initialization; warn instead.
+
 2008-10-10  Kent Sebastian  <ksebasti@redhat.com>
 
 	* cache.cxx (cache_clean): New group of functions implementing cache
